--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "kickass.to",
-  "version": "0.2.0",
-  "description": "ERROR: No README.md file found!",
+  "version": "0.2.1",
+  "description": "A module to manage kickass.to torrents",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
